SERVER-27177 initialize kCurrentScope before creating mozjs runtime/scope

(cherry picked from commit 7cb646696ba926a577a23572afa857b4360b9bac)